--- a/NotikaEmail_Identity/Views/_ViewImports.cshtml
+++ b/NotikaEmail_Identity/Views/_ViewImports.cshtml
@@ -3,7 +3,8 @@
 @using NotikaEmail_Identity.DTOs.CategoryDtos
 @using NotikaEmail_Identity.DTOs.MessageDtos
 @using NotikaEmail_Identity.DTOs.UserDtos
-
+@using PagedList.Core
+@addTagHelper *, PagedList.Core.Mvc
 
 
 
